kubernetes/apps/auth/authelia/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-dev
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - auth.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia-dev
          port: 80
